--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,11 @@
 
-.   {
+p {
   font-family: "Orbitron", sans-serif;
   font-style: normal;
 }
 
-
-
-.   {
+.skill-card   {
   font-family: "Tourney", sans-serif;
   font-style: normal;
 }
+
