--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,18 @@ body{
   background-color: #000814;
 }
 
-p, li{
-  color: #E6BCCD
+p {
+  color: #E6BCCD;
+}
+
+h2 {
+  color: #89FC00;
+}
+
+h1{
+  color: #fcfcfc;
+}
+
+ul, li {
+  color: #6713CD;
 }
