--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ body{
   background-color: #000814;
 }
 
+/* .navigation {
+  position: fixed;
+} */
+
 p, h3 {
   color: #E6BCCD;
 }
@@ -21,3 +25,20 @@ ul, li {
 h3  {
   text-align: right;
 }
+
+li {
+  display: inline;
+  padding-right: 5rem;
+  text-decoration: none;
+  list-style: none;
+}
+
+ /* nav ul{
+  display: flex;
+  list-style: none;
+ }
+  */
+
+  .copyright  {
+    text-align: center;
+  }
