--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,12 @@ color: #6713CD;
 
 h3 {
   color: #E6BCCD;
+  font-family: Orbitron;
 }
 
 h2 {
   color: #89FC00;
+  font-family: Tourney;
 }
 
 .logo{
