--- a/css/styles.css
+++ b/css/styles.css
@@ -17,15 +17,18 @@ color: #6713CD;
 h3 {
   color: #E6BCCD;
   font-family: Orbitron;
+  font-size: 20px;
 }
 
 h2 {
   color: #89FC00;
   font-family: Tourney;
+  font-size: 30px;
 }
 
 .logo{
   color: #fcfcfc;
+  font-size: 45px;
 }
 
 li {
@@ -34,6 +37,7 @@ li {
   text-decoration: none;
   list-style: none;
   color: #6713CD;
+  font-size: 20px;
   
 }
 
