--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
   background-color: #000814;
+  letter-spacing: 1px;
 }
 .nav-header{
   display: flex;
@@ -7,7 +8,7 @@ body{
   align-items: center;
 }
 
-.skills {
+.my-skills,.my-contacts {
   text-align: center;
 }
 
@@ -30,6 +31,10 @@ h2 {
 .logo{
   color: #fcfcfc;
   font-size: 70px;
+}
+
+p {
+  color: #fcfcfc;
 }
 
 li {
