--- a/css/styles.css
+++ b/css/styles.css
@@ -15,22 +15,22 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 75px;
+    padding: px;
     position: sticky;
     top: 0;
     background-color: #000814;
+    border-bottom: 1px solid seashell;
 }
 
 .container, .about-info, .hard-skills, .soft-skills  {
     background-color: #6713CD;
-    border: 5px solid #fcfcfc;
+    border: 6px solid #fcfcfc;
     color: #89FC00;
     padding: 30px;
     width: 80%;
-    margin:25px auto 0 auto;
-    gap: 20px;
-    box-shadow: 8px 8px 10px; 
-    
+    margin:50px auto 0 auto;
+    gap: 30px;
+    box-shadow: 10px 10px 12px; 
 }
 
 #projects {
@@ -116,6 +116,7 @@ h3 {
   color: #E6BCCD;
   font-family: Orbitron;
   font-size: 15px;
+  text-align:center
 }
 
 h2, .about-me {
@@ -145,13 +146,13 @@ li {
 .copyright  {
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .about-info {
   display: flex;
   align-items: center;
   text-align: justify;
-  
 }
 
 
