--- a/css/styles.css
+++ b/css/styles.css
@@ -31,19 +31,23 @@ img{
     margin:50px auto 0 auto;
     gap: 30px;
     box-shadow: 10px 10px 12px; 
+    /* align-items: center;
+    justify-content: center; */
+    
 }
 
 .container-2  {
     background-color: #6713CD;
     border: 6px solid #fcfcfc;
     color: #89FC00;
-    padding: 10px;
+    padding: 20px;
     height: 350px;
     width: 350px;
-    margin:50px auto 0 auto;
+    margin:50px 50px;
     gap: 30px;
     box-shadow: 10px 10px 15px; 
-    justify-content: space-between;
+    justify-content: space-around;
+    /* display: flex; */
 }
 
 /* .location {
@@ -84,6 +88,8 @@ text-decoration: none;
 nav a { 
     color:  #89FC00;
     text-decoration: none;
+    font-size: 30px;
+    padding: 30px;
 }
 
 .personal {
@@ -129,39 +135,43 @@ margin-top: 25px;
     max-width: 50%;
     text-align: justify;
 }
-.background {
-text-align: center;
+
+.background, h3 {
 margin-top: 20px;
+/* align-items: end; */
+/* justify-content: end; */
 }
 
 h3 {
   color: #E6BCCD;
   font-family: Orbitron;
-  font-size: 15px;
+  font-size: 20px;
   text-align:center
 }
 
 h2, .about-me {
   color: #89FC00;
   font-family: Tourney;
-  font-size: 30px;
+  font-size: 40px;
   text-align: center;
   text-transform: uppercase;
 }
 
 .logo {
   color: #fcfcfc;
-  font-size: 65px;
+  font-size: 70px;
+  padding: 30px;
 }
 
 p {
 color: #fcfcfc;
 line-height: 10px;
+font-size: 20px;
 }
 
 li {
   color: #E6BCCD;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
 }
 
