--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ img{
     margin:50px auto 0 auto;
     gap: 30px;
     box-shadow: 10px 10px 12px; 
+    flex-grow: 0;
 
     /* align-items: center;
     justify-content: center; */
