--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ img{
     margin:50px 50px;
     gap: 30px;
     box-shadow: 10px 10px 15px; 
-    justify-content: space-around;
+    /* justify-content: space-around; */
    flex-grow: 0;
 }
 
