--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,7 @@ margin-top: 25px;
     max-width: 50%;
     text-align: justify;
      color: #E6BCCD;
+     font-size: 2rem;
 }
 
 /* .background, h3 {
