--- a/css/styles.css
+++ b/css/styles.css
@@ -96,9 +96,9 @@ text-decoration: none;
   align-items: center;
 }
 .dnd-character  {
- /* display: flex; */
- /* height: 400px;
- width: 300px; */
+
+ height: 400px;
+ width: 300px;
 
 
 }
